# browser-memory-daemon

./: .env.example  .gitignore  AGENTS.html  AGENTS.md  README.html  README.md  browser-memory-daemon-high-level-doc.html  pyproject.toml  requirements-dev.txt
architecture/: README.md  c4-diagrams.md  workspace.dsl
architecture/diagrams/: README.md  structurizr-BrowserMediaContainers.mmd  structurizr-CaptureContainers.mmd  structurizr-CredentialedMediaSidecarFlow.mmd  structurizr-DaemonDoctorComponents.mmd  structurizr-DaemonForgetComponents.mmd  structurizr-DaemonIngestComponents.mmd  structurizr-DaemonMediaComponents.mmd  structurizr-DaemonMediaWorkerContainers.mmd  structurizr-DaemonPublicMediaWorkerFlow.mmd  structurizr-DaemonReadComponents.mmd  structurizr-DailyDriverDeployment.mmd  structurizr-ExtensionCaptureComponents.mmd  structurizr-ExtensionMediaComponents.mmd  structurizr-FastCaptureFlow.mmd  structurizr-OpsContainers.mmd
contracts/: bmd.x-observations.v1.schema.json
docs/: ARCHITECTURE.html  ARCHITECTURE.md  CLI_UX_CONTRACT.html  CLI_UX_CONTRACT.md  DIAGRAMS.html  DIAGRAMS.md  EXECUTIVE_BRIEF.html  EXECUTIVE_BRIEF.md  README.html  README.md  STATUS.html  STATUS.md  TESTS.html  TESTS.md  USER_GUIDE.html  USER_GUIDE.md  api.html  api.md  blob-root-migration.html  blob-root-migration.md  coverage-baseline.html  coverage-baseline.md  daily-driver-deployment.html  daily-driver-deployment.md  database-migrations.html  database-migrations.md  media-artifacts.html  media-artifacts.md  media-sidecar-design-history.md  retention-compaction-backup.html  retention-compaction-backup.md  security-model.html  security-model.md  storage-growth-model.html  storage-growth-model.md  test-plan.html  test-plan.md
extension/: manifest.json  package.json
requirements/: catalog.toml
scripts/: build-extension.sh  chrome-for-testing-lock.json  chrome-for-testing.mjs  daily-driver-health.sh  dev-daemon.sh  generate_showcase.py  generate_test_inventory.py  install-daily-driver.sh  launch-windows-chrome-test-profile.sh  real-chrome-e2e.mjs  render_docs.py  run-concurrency-stress.sh  run-e2e.sh  run-fast-gate.sh  run-performance-benchmarks.sh  run-real-chrome-e2e.sh  secret-scan.sh  showcase.spec.json  svg_qa_extract.py
ui/: app.js  index.html  style.css
(+495 files in other folders)
