[project]
name = "browser-memory-daemon"
version = "0.1.0"
description = "Local-first Windows Chrome to WSL browser memory daemon"
requires-python = ">=3.11"

[project.scripts]
memory = "browser_memory_daemon.cli:main"

[tool.setuptools.package-data]
"browser_memory_daemon.migration_steps" = ["*.sql"]

[tool.setuptools.packages.find]
where = ["daemon/src"]
include = ["browser_memory_daemon*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
follow_imports = "skip"
files = [
  "daemon/src/browser_memory_daemon/blob_store.py",
  "daemon/src/browser_memory_daemon/migrations.py",
  "daemon/src/browser_memory_daemon/migration_steps",
  "daemon/src/browser_memory_daemon/storage_paths.py",
  "daemon/src/browser_memory_daemon/text_authority.py",
  "daemon/src/browser_memory_daemon/media_storage.py",
  "daemon/src/browser_memory_daemon/media_fetch.py",
  "daemon/src/browser_memory_daemon/media_hls.py",
  "daemon/src/browser_memory_daemon/media_ops.py",
  "daemon/src/browser_memory_daemon/media_store.py",
  "daemon/src/browser_memory_daemon/media_models.py",
  "daemon/src/browser_memory_daemon/media_tasks.py",
  "daemon/src/browser_memory_daemon/blob_lifecycle.py",
  "daemon/src/browser_memory_daemon/storage_reconcile.py",
  "daemon/src/browser_memory_daemon/backup_ops.py",
]

[tool.coverage.run]
branch = true
source = ["browser_memory_daemon"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
fail_under = 80

[tool.pytest.ini_options]
pythonpath = ["daemon/src"]
testpaths = ["daemon/tests"]
addopts = "-q"
